--- a/site/notebooks/quickstart/quickstart_model_documentation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_documentation.ipynb
@@ -272,13 +272,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44bf926b",
    "metadata": {},
    "source": [
     "<a id='toc3_3_'></a>\n",
     "\n",
     "### Initialize the Python environment\n",
     "\n",
-    "Next, let's import the necessary libraries and set up your Python environment for data analysis:\n",
+    "Then, let's import the necessary libraries and set up your Python environment for data analysis:\n",
     "\n",
     "- Import **Extreme Gradient Boosting** (XGBoost) with an alias so that we can reference its functions in later calls. XGBoost is a powerful machine learning library designed for speed and performance, especially in handling structured or tabular data.\n",
     "- Enable **`matplotlib`**, a plotting library used for visualizing data. Ensures that any plots you generate will render inline in our notebook output rather than opening in a separate window."
@@ -308,6 +309,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d87ae6f",
    "metadata": {},
    "source": [
     "<a id='toc4_1_'></a>\n",
@@ -349,6 +351,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bde500ce",
    "metadata": {},
    "source": [
     "<a id='toc5_'></a>\n",
@@ -389,11 +392,12 @@
     "\n",
     "## Preprocessing the raw dataset\n",
     "\n",
-    "Next, let's preprocess the imported dataset to get ready for running tests with ValidMind."
+    "Before running tests with Validmind, we'll need to preprocess our imported dataset. This involves splitting the data and separating the features (inputs) from the targets (outputs)."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "83545763",
    "metadata": {},
    "source": [
     "<a id='toc6_1_'></a>\n",
@@ -402,11 +406,11 @@
     "\n",
     "Splitting our dataset helps assess how well the model generalizes to unseen data.\n",
     "\n",
-    "Use [`preprocess()`](https://docs.validmind.ai/validmind/validmind/datasets/classification/customer_churn.html#preprocess) to split our data into three parts:\n",
+    "Use [`preprocess()`](https://docs.validmind.ai/validmind/validmind/datasets/classification/customer_churn.html#preprocess) to split our dataset into three subsets:\n",
     "\n",
-    "1. **train_df** — Used to teach the model.\n",
-    "2. **validation_df** — Used to check how well the model is learning while it's being trained.\n",
-    "3. **test_df** — Used later on to see how the model performs on new, unseen data."
+    "1. **train_df** — Used to train the model.\n",
+    "2. **validation_df** — Used to evaluate the model's performance during training.\n",
+    "3. **test_df** — Used later on to asses the model's performance on new, unseen data."
    ]
   },
   {
@@ -421,18 +425,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f0ae3dc5",
    "metadata": {},
    "source": [
     "<a id='toc6_2_'></a>\n",
     "\n",
     "### Separate features and targets\n",
     "\n",
-    "The model needs to learn two things:\n",
+    "To train the model, we need to provide it with:\n",
     "\n",
     "1. **Inputs** — Features such as customer age, usage, etc.\n",
-    "2. **Correct answers** — Whether the customer churned or not.\n",
+    "2. **Outputs (Expected answers/labels)** — in our case, we would like to know whether the customer churned or not.\n",
     "\n",
-    "So here we'll use `x_train` and `x_val` hold the input data (features) and `y_train` and `y_val` hold the answers (the target we want to predict):"
+    "Here, we'll use `x_train` and `x_val` to hold the input data (features), and `y_train` and `y_val` to hold the answers (the target we want to predict):"
    ]
   },
   {
@@ -473,6 +478,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "826d8adf",
    "metadata": {},
    "source": [
     "<a id='toc7_1_'></a>\n",
@@ -481,9 +487,9 @@
     "\n",
     "Then, we'll set the evaluation metrics, which tells the model to use three different ways to measure its performance:\n",
     "\n",
-    "1. **error** — How many times it got the prediction wrong.\n",
-    "2. **logloss** — How confident the predictions are.\n",
-    "3. **auc** — How well the model distinguishes between churn and not churn.\n",
+    "1. **error** — Measures how often the model makes incorrect predictions.\n",
+    "2. **logloss** — Indicates how confident the predictions are.\n",
+    "3. **auc** — Evaluates how well the model distinguishes between churn and not churn.\n",
     "\n",
     "Using multiple metrics gives a more complete picture of how good (or bad) the model is."
    ]
@@ -510,7 +516,7 @@
     "\n",
     "Finally, our actual training step — where the model learns patterns from the data, so it can make predictions later:\n",
     "\n",
-    "- The model learns from `x_train` and `y_train`, and uses `x_val` and `y_val` to check if it’s learning well.\n",
+    "- The model is trained on `x_train` and `y_train`, and evaluates its performance using `x_val` and `y_val` to check if it’s learning well.\n",
     "- To turn off printed output while training, we'll set `verbose` to `False`."
    ]
   },
