--- a/site/notebooks/EXECUTED/model_validation/3-developing_challenger_model.ipynb
+++ b/site/notebooks/EXECUTED/model_validation/3-developing_challenger_model.ipynb
@@ -584,7 +584,10 @@
     "\n",
     "#### Evaluate performance of the champion model\n",
     "\n",
-    "Now, let's run and log our batch of model performance tests using our testing dataset (`vm_test_ds`) for our champion model:"
+    "Now, let's run and log our batch of model performance tests using our testing dataset (`vm_test_ds`) for our champion model:\n",
+    "\n",
+    "- Here, the testing set serves as a proxy for real-world data, as it was untouched during training or tuning, giving us a more authentic estimate of performance.\n",
+    "- The testing set acts as protection against selection bias and model tweaking, giving a final, more unbiased checkpoint."
    ]
   },
   {
@@ -745,7 +748,10 @@
    "source": [
     "Let's see if models suffer from any *overfit* potentials and also where there are potential sub-segments of issues with the [`OverfitDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/OverfitDiagnosis.html). \n",
     "\n",
-    "Overfitting occurs when a model learns the training data too well, capturing not only the true pattern but noise and random fluctuations resulting in excellent performance on the training dataset but poor generalization to new, unseen data."
+    "Overfitting occurs when a model learns the training data too well, capturing not only the true pattern but noise and random fluctuations resulting in excellent performance on the training dataset but poor generalization to new, unseen data:\n",
+    "\n",
+    "- Since the training dataset (`vm_train_ds`) was used to fit the model, we use this set to establish a baseline performance for how well the model performs on data it has already seen.\n",
+    "- The testing dataset (`vm_test_ds`) was never seen during training, and here simulates real-world generalization, or how well the model performs on new, unseen data. "
    ]
   },
   {
@@ -769,7 +775,7 @@
    "source": [
     "Let's also conduct *robustness* and *stability* testing of the two models with the [`RobustnessDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/RobustnessDiagnosis.html).\n",
     "\n",
-    "Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets."
+    "Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets.  Again, we'll use both the training and testing dataset to evaluate baseline performance and to simulate real-word generalization."
    ]
   },
   {
@@ -809,6 +815,13 @@
     "# Store the feature importance tests\n",
     "FI = vm.tests.list_tests(tags=[\"feature_importance\"], task=\"classification\",pretty=False)\n",
     "FI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll only use our testing dataset (`vm_test_ds`) here, to provide a realistic, unseen sample that mimic future or production data, as the training dataset has already influenced our model during learning:"
    ]
   },
   {
