--- a/site/notebooks/tutorials/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/tutorials/model_development/2-start_development_process.ipynb
@@ -142,7 +142,7 @@
     "In our below example, note that: \n",
     "\n",
     "- The target column, `Exited` has a value of `1` when a customer has churned and `0` otherwise.\n",
-    "- The ValidMind Library provides a wrapper to automatically load the dataset as a Pandas DataFrame object."
+    "- The ValidMind Library provides a wrapper to automatically load the dataset as a [Pandas DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) object. A Pandas Dataframe is a two-dimensional tabular data structure that makes use of rows and columns."
    ]
   },
   {
@@ -887,7 +887,7 @@
     "\n",
     "### Assign predictions\n",
     "\n",
-    "Once the model has been registered you can assign model predictions to the training and test datasets.\n",
+    "Once the model has been registered you can assign model predictions to the training and testing datasets.\n",
     "\n",
     "- The [`assign_predictions()` method](https://docs.validmind.ai/validmind/validmind/vm_models.html#assign_predictions) from the `Dataset` object can link existing predictions to any number of models.\n",
     "- This method links the model's class prediction values and probabilities to our `vm_train_ds` and `vm_test_ds` datasets.\n",
@@ -959,7 +959,7 @@
     "\n",
     "- [x] Import a sample dataset\n",
     "- [x] Identify which tests you might want to run with ValidMind\n",
-    "- [x] Initialize ValidMind datasets\n",
+    "- [x] Initialize ValidMind datasets and model objects\n",
     "- [x] Run individual tests\n",
     "- [x] Utilize the output from tests you've run\n",
     "- [x] Log test results from sets of or individual tests as evidence to the ValidMind Platform\n",
