--- a/site/notebooks/quickstart/quickstart_model_validation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_validation.ipynb
@@ -451,7 +451,7 @@
     "\n",
     "### Preprocess the raw dataset\n",
     "\n",
-    "Let's say that thanks to the documentation submitted by the model development team ([Learn more ...](https://docs.validmind.ai/notebooks/quickstart/quickstart_model_documentation.html)), we know that the sample dataset was first preprocessed before being used to train the champion model.\n",
+    "Let's say that thanks to the documentation submitted by the model development team ([Learn more ...](quickstart_model_documentation.ipynb)), we know that the sample dataset was first preprocessed before being used to train the champion model.\n",
     "\n",
     "During model validation, we use the same data processing logic and training procedure to confirm that the model's results can be reproduced independently, so let's also start by preprocessing our imported dataset to verify that preprocessing was done correctly. This involves splitting the data and separating the features (inputs) from the targets (outputs)."
    ]
@@ -937,7 +937,9 @@
    "id": "ecefecac",
    "metadata": {},
    "source": [
-    "Let's see if the model suffers from any *overfit* potentials and also where there are potential sub-segments of issues. Overfitting occurs when a model learns the training data too well, capturing not only the true pattern but noise and random fluctuations resulting in excellent performance on the training dataset but poor generalization to new, unseen data:\n",
+    "Let's see if the model suffers from any *overfit* potentials and also where there are potential sub-segments of issues. \n",
+    "\n",
+    "Overfitting occurs when a model learns the training data too well, capturing not only the true pattern but noise and random fluctuations resulting in excellent performance on the training dataset but poor generalization to new, unseen data:\n",
     "\n",
     "- Since the training dataset (`vm_train_ds`) was used to fit the model, we use this set to establish a baseline performance for how well the model performs on data it has already seen.\n",
     "- The testing dataset (`vm_test_ds`) was never seen during training, and here simulates real-world generalization, or how well the model performs on new, unseen data. "
@@ -966,7 +968,7 @@
    "source": [
     "Let's also conduct *robustness* and *stability* testing. Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets.\n",
     "\n",
-    "Again, we'll use both the training and testing dataset to evaluate baseline performance and to simulate real-word generalization."
+    "Again, we'll use both the training and testing dataset to evaluate baseline performance and to simulate real-word generalization:"
    ]
   },
   {
