notebooks: Pulling in new Quickstart for model documentation (#720)
* Editing new quickstart links

* Pulled in notebooks from beck/sc-7911/edit-code-samples-notebooks-quickstart-for

* Typo

* Removing old move command

* Pulled in latest changes for quickstart for model documentation

---------

Co-authored-by: Lois Ansah <loiscodes@gmail.com>

--- a/site/notebooks/tutorials/model_validation/2-start_validation_process.ipynb
+++ b/site/notebooks/tutorials/model_validation/2-start_validation_process.ipynb
@@ -147,7 +147,7 @@
     "In our below example, note that:\n",
     "\n",
     "- The target column, `Exited` has a value of `1` when a customer has churned and `0` otherwise.\n",
-    "- The ValidMind Library provides a wrapper to automatically load the dataset as a Pandas [DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) object."
+    "- The ValidMind Library provides a wrapper to automatically load the dataset as a [Pandas DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) object. A Pandas Dataframe is a two-dimensional tabular data structure that makes use of rows and columns."
    ]
   },
   {
