--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -18,6 +18,8 @@ format:
     view-distance: 2
     logo: /validmind.png
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    revealjs-plugins:
+      - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
     output-file: _course-slides.html
@@ -42,29 +44,36 @@ This {{#th}} module is part of a {{#}}-part series:
 
 ## In this course {.center}
 
-:::: {.columns .f4}
+<!-- :::: {.columns .f4}
 ::: {.column width="50%" .mt4 .pr4}
 ### Introduction
 - [Before you begin](#before-you-begin)
 
 :::
 
-::::
+:::: -->
 
 :::: {.columns .f4}
 
-::: {.column width="50%" .mt4 .pr4}
+::: {.column width="30%" .mt4 .pr4}
+### Introduction
+- [Before you begin](#before-you-begin)
+
+:::
+
+::: {.column width="30%" .mt4 .pr4}
 ### Section 1
 
 1. [iFrame embed right](#iframe-embed-right)
 2. [iFrame embed bottom](#iframe-embed-bottom)
-3. [iFrame embed footer](#iframe-embed-footer)
-4. [Scrollable single user guide](#scrollable-single-user-guide)
-5. [Scrollable tabset user guides](#scrollable-tabset-user-guide)
+3. [iFrame embed left](#iframe-embed-left)
+4. [iFrame embed top](#iframe-embed-top)
+5. [Scrollable single user guide](#scrollable-single-user-guide)
+6. [Scrollable tabset user guides](#scrollable-tabset-user-guide)
 
 :::
 
-::: {.column width="50%" .mt4}
+::: {.column width="30%" .mt4}
 ### Section 2
 
 Example embedded `iframe` for interactive copy/paste workaround:
@@ -138,8 +147,8 @@ Be sure to return to this page afterwards.
 
 ## {background-iframe="https://app.prod.validmind.ai/" data-preload="yes"} 
 
-:::: {.fr .f5 .mv5 .nr4 .pa5 .overlay}
-This is a right-aligned modal `.overlay` <br>on top of the live {{< var vm.product >}} Platform.  
+:::: {.slideover--r}
+This is a collapsible right-aligned modal (`slideover--r`) on top of the live {{< var vm.product >}} Platform.
 
 - It mimics the style of the docs site callouts.
 - **Bold text shows up in a different colour.**
@@ -149,7 +158,7 @@ This is a right-aligned modal `.overlay` <br>on top of the live {{< var vm.produ
 **This is the nested embed**, <br>which also has its own bold styling.
 :::
 
-As you can see, you need to get creative <br>with some of your `<br>`s to determine <br>the max-width of the overlay box.
+This modal uses a version of the [`nrichers/slideover` extension](https://github.com/nrichers/slideover).
 
 ::::
 
@@ -157,29 +166,32 @@ As you can see, you need to get creative <br>with some of your `<br>`s to determ
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
-**This is a bottom-aligned modal `.overlay` on top of a rendered site file.**
+:::: {.slideover--b}
+**This is a collapsible bottom-aligned modal (`slideover--b`) on top of a rendered site file.**
 
-::: {.f6}
-You can fully interact with the page contents. 
-:::
-::::
-
-# iFrame embed footer {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
-
-<!-- Avoid overlapping with UI elements by moving instructions into footer -->
-::: footer
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f3 .tc .pl4 .overlay}
-Sometimes you'll need to move the `overlay` to the footer in order to avoid overlap with UI elements.
-
-::: {.f4}
-This will also stretch the overlay to 95%.
-:::
+When you add `background-interactive="yes"` to the `background-iframe` element, users can fully interact with the page contents.
 
 ::::
-:::
+
+# iFrame embed left {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+## {background-iframe="https://app.prod.validmind.ai/" data-preload="yes"} 
+
+:::: {.slideover--l .auto-collapse}
+**This is a collapsible left-aligned modal (`slideover--l`) on top of the live {{< var vm.product >}} Platform.**
+
+When you add `.auto-collapse` to the slideover, a modal will auto-collapse after five seconds.
+::::
+
+# iFrame embed top {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
+
+:::: {.slideover--t .auto-collapse-10}
+**This is a collapsible top-aligned modal (`slideover--t`) on top of a rendered site file.**
+
+When you add `.auto-collapse-10` to the slideover, a modal will auto-collapse after 10 seconds.
+::::
 
 # Scrollable single user guide {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
