--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -152,10 +152,10 @@ This is a collapsible right-aligned modal (`slideover--r`) on top of the live {{
 
 - It mimics the style of the docs site callouts.
 - **Bold text shows up in a different colour.**
-- You can use an additional callout style <br>with this class: `.embed`
+- You can use an additional callout style with this class: `.embed`
 
-::: {.f6 .pl3 .pr3 .embed}
-**This is the nested embed**, <br>which also has its own bold styling.
+::: {.embed}
+**This is the nested embed**, that has its own styling.
 :::
 
 This modal uses a version of the [`nrichers/slideover` extension](https://github.com/nrichers/slideover).
