Tweaking embed & code

--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -150,21 +150,43 @@ Be sure to return to this page afterwards.
 :::: {.slideover--r}
 This is a collapsible right-aligned modal (`slideover--r`) on top of the live {{< var vm.product >}} Platform.
 
-- It mimics the style of the docs site callouts.
+- This modal uses a version of the [`nrichers/slideover` extension](https://github.com/nrichers/slideover) ...
+- ... with the styling modified to mimic the style of the docs site callouts.
 - **Bold text shows up in a different colour.**
 - You can use an additional callout style with this class: `.embed`
 
 ::: {.embed}
-**This is the nested embed**, that has its own styling.
+**This is the nested embed**, that has its own styling. Think of it as a callout within the slideovers.
+
 :::
 
-This modal uses a version of the [`nrichers/slideover` extension](https://github.com/nrichers/slideover). 
+- And code blocks look like this:
+  ```python
+  import validmind as vm
+
+  vm.init(
+      # api_host="...",
+      # api_key="...",
+      # api_secret="...",
+      # model="...",
+  )
+  ```
+
+The box will automatically scroll once past a certain length (a percentage of your screen)...
+
+> Eternal-return right chaos contradict strong enlightenment deceptions virtues strong. Love contradict marvelous of faith. Burying moral battle noble moral strong inexpedient fearful.
+>
+> Passion burying spirit moral dead endless madness hope. Joy play free value mountains prejudice derive decrepit.
+>
+> Burying faithful dead truth faithful law love zarathustra love. Truth ocean of superiority ultimate battle mountains prejudice enlightenment love passion merciful truth faithful.
+>
+> Ultimate pinnacle moral depths revaluation grandeur revaluation evil. Convictions spirit.
 
 ::::
 
 # iFrame embed bottom {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
+## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"}
 
 :::: {.slideover--b}
 **This is a collapsible bottom-aligned modal (`slideover--b`) on top of a rendered site file.**
