--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -55,13 +55,13 @@ This {{#th}} module is part of a {{#}}-part series:
 
 :::: {.columns .f4}
 
-::: {.column width="30%" .mt4 .pr4}
+::: {.column width="20%" .mt4 .pr4}
 ### Introduction
 - [Before you begin](#before-you-begin)
 
 :::
 
-::: {.column width="30%" .mt4 .pr4}
+::: {.column width="35%" .mt4 .pr4}
 ### Section 1
 
 1. [iFrame embed right](#iframe-embed-right)
@@ -73,7 +73,7 @@ This {{#th}} module is part of a {{#}}-part series:
 
 :::
 
-::: {.column width="30%" .mt4}
+::: {.column width="45%" .mt4}
 ### Section 2
 
 Example embedded `iframe` for interactive copy/paste workaround:
@@ -131,7 +131,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 Be sure to return to this page afterwards.
 :::
 
-2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}: 
+2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}:
 
 ::: {.tc}
 <button class="button" onClick="window.location.reload();">Refresh Page</button>
@@ -202,7 +202,7 @@ When you add `background-interactive="yes"` to the `background-iframe` element, 
 :::: {.slideover--l .auto-collapse}
 **This is a collapsible left-aligned modal (`slideover--l`) on top of the live {{< var vm.product >}} Platform.**
 
-When you add `.auto-collapse` to the slideover, a modal will auto-collapse after five seconds.
+When you add `.auto-collapse` to the slideover, the modal will auto-collapse after five seconds for that slide.
 
 ::::
 
@@ -213,7 +213,7 @@ When you add `.auto-collapse` to the slideover, a modal will auto-collapse after
 :::: {.slideover--t .auto-collapse-10}
 **This is a collapsible top-aligned modal (`slideover--t`) on top of a rendered site file.**
 
-When you add `.auto-collapse-10` to the slideover, a modal will auto-collapse after 10 seconds.
+When you add `.auto-collapse-10` to the slideover, the modal will auto-collapse after 10 seconds for that slide.
 ::::
 
 # Scrollable single user guide {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
