Updating template reference

--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -156,7 +156,9 @@ This is a collapsible right-aligned modal (`slideover--r`) on top of the live {{
 - You can use an additional callout style with this class: `.embed`
 
 ::: {.embed}
-**This is the nested embed**, that has its own styling. Think of it as a callout within the slideovers.
+This is the nested embed, that has its own styling. Think of it as a callout within the slideovers.
+
+If you update the extension, **make sure to reapply our custom CSS changes!**
 
 :::
 
@@ -171,16 +173,6 @@ This is a collapsible right-aligned modal (`slideover--r`) on top of the live {{
       # model="...",
   )
   ```
-
-The box will automatically scroll once past a certain length (a percentage of your screen)...
-
-> Eternal-return right chaos contradict strong enlightenment deceptions virtues strong. Love contradict marvelous of faith. Burying moral battle noble moral strong inexpedient fearful.
->
-> Passion burying spirit moral dead endless madness hope. Joy play free value mountains prejudice derive decrepit.
->
-> Burying faithful dead truth faithful law love zarathustra love. Truth ocean of superiority ultimate battle mountains prejudice enlightenment love passion merciful truth faithful.
->
-> Ultimate pinnacle moral depths revaluation grandeur revaluation evil. Convictions spirit.
 
 ::::
 
@@ -197,12 +189,28 @@ When you add `background-interactive="yes"` to the `background-iframe` element, 
 
 # iFrame embed left {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="https://app.prod.validmind.ai/" data-preload="yes"} 
+## {background-iframe="https://app.prod.validmind.ai/" data-preload="yes"}
 
-:::: {.slideover--l .auto-collapse}
-**This is a collapsible left-aligned modal (`slideover--l`) on top of the live {{< var vm.product >}} Platform.**
+:::: {.slideover--l .auto-collapse .quarters}
+**This is a collapsible left-aligned modal (`slideover--l`) at half-size on top of the live {{< var vm.product >}} Platform.**
 
 When you add `.auto-collapse` to the slideover, the modal will auto-collapse after five seconds for that slide.
+
+You can adjust the size of the modals, for more or less screen real estate:
+
+- `.quarters` — 3/4s or 75% of the default width.
+- `.half` — 1/2s or 50% of the default width.
+- `.third` — 1/3 or 33ish% of the default width.
+
+The box will also automatically scroll once past a certain length (a percentage of your screen)...
+
+> Eternal-return right chaos contradict strong enlightenment deceptions virtues strong. Love contradict marvelous of faith. Burying moral battle noble moral strong inexpedient fearful.
+>
+> Passion burying spirit moral dead endless madness hope. Joy play free value mountains prejudice derive decrepit.
+>
+> Burying faithful dead truth faithful law love zarathustra love. Truth ocean of superiority ultimate battle mountains prejudice enlightenment love passion merciful truth faithful.
+>
+> Ultimate pinnacle moral depths revaluation grandeur revaluation evil. Convictions spirit.
 
 ::::
 
